chore: update keys.json example to match exact format, make bot concurrent to proccess multiple requests at the same time, update url validator to match vt. tiktok subdomain

--- a/keys.json.example
+++ b/keys.json.example
@@ -1,8 +1,5 @@
 {
-  "keys": [
-    {
-      "key": "${COBALT_API_KEY}",
-      "name": "bot"
+    "some-uuid-string-goes-thisplace": {
+        "name": "My API"
     }
-  ]
-} 
+}
